feat addded about pages

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>the-tech-portfolio</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+     <title>Roshan Karki – Portfolio</title>
 
-    <meta property="og:title" content="the-tech-portfolio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- SEO Meta -->
+    <meta name="description" content="Portfolio of Roshan Karki – Web Developer" />
+    <meta name="author" content="Roshan Karki" />
+
+    <!-- Open Graph (Facebook, LinkedIn etc.) -->
+    <meta property="og:title" content="Roshan Karki – Portfolio" />
+    <meta property="og:description" content="Showcasing my projects in web development, MERN stack, php Laravel, NextJs" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://yourdomain.com/images/roshan-portfolio-og.png" />
 
+    <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@your_twitter_handle" />
+    <meta name="twitter:image" content="https://yourdomain.com/images/roshan-portfolio-og.png" />
   </head>
 
   <body>
